<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="280dp"
    android:padding="@dimen/padding_average"
    android:background="@color/white"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/room_dialog_heading"
        style="@style/dialog_header"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_room_info"
        style="@style/dialog_info"/>

    <EditText
        android:id="@+id/edt_room_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/hint_room_name"
        style="@style/regular_editTexts"
        />
    <Spinner
        android:id="@+id/sp_folder"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        style="@style/regular_editTexts"
        />
    <Button
        android:id="@+id/button_room_submit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/text_submit"
        style="@style/regular_buttons"/>
</LinearLayout>